--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>ua.crypto</groupId>
   <artifactId>DSProtocol</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.1</version>
 
   <name>DSProtocol</name>
   <!-- FIXME change it to the project's website -->
